tests/ui/fail/recursive_no_enscoping.stderr
error: Missing `#[with]` on the enscoping `impl` or `trait` block
  --> tests/ui/fail/recursive_no_enscoping.rs:29:5
   |
29 |     #[with(recursive = true)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `with` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Missing `#[with]` on the enscoping `impl` or `trait` block
  --> tests/ui/fail/recursive_no_enscoping.rs:22:5
   |
22 |     #[with(recursive = true)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `with` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Missing `#[with]` on the enscoping `impl` or `trait` block
  --> tests/ui/fail/recursive_no_enscoping.rs:13:5
   |
13 |     #[with(recursive = true)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `with` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Missing `#[with]` on the enscoping `impl` or `trait` block
 --> tests/ui/fail/recursive_no_enscoping.rs:6:5
  |
6 |     #[with(recursive = true)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `with` (in Nightly builds, run with -Z macro-backtrace for more info)
